--- a/study/src/main/resources/application.yml
+++ b/study/src/main/resources/application.yml
@@ -36,7 +36,10 @@ spring:
     url: jdbc:mariadb://localhost:8001/springboot_jihun?serverTimezone=Asia/Seoul&allowMultiQueries=true
     username: root
     password: toor
-
+  security:
+    user:
+      name: test
+      password: 1234 
 mybatis:
   mapper-locations:
   - /mappers/*.xml
