--- a/study/src/main/resources/application.yml
+++ b/study/src/main/resources/application.yml
@@ -49,6 +49,24 @@ spring:
             scope:
             - email
             - profile
+          naver:
+            client-id: qFYJpljgkmJJmfBl6a5h
+            client-secret: vDez0jXk0l
+            scope:
+            - email
+            - name
+            client-name: Naver
+            authorization-grant-type: authorization_code
+            redirect-uri: http://localhost:8000/login/oauth2/code/naver
+        provider:
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response 
 mybatis:
   mapper-locations:
   - /mappers/*.xml
+  
+file:
+  path: C:/junli/jihun/workspace/gitt/springboot_0510/upload/
